# effective_stream_cache

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bloom_filter.hpp  cache.hpp  cache_lfu_bf.hpp  cache_mod.hpp  cm_sketch.hpp  lru.hpp  main.cpp  main_lfu.cpp  test.cpp  tiny_lfu.hpp  tiny_lfu_cms.hpp  utils.hpp
.github/: ci.yaml
.github/workflows/: tests.yaml
benchmark/: CMakeLists.txt  bloom_filter_benchmark.cpp  cm_sketch_benchmark.cpp  large_page_benchmark.cpp  small_page_find_benchmark.cpp  tiny_lfu_cms_benchmark.cpp
cmake/: CompileOptions.cmake
core/: CMakeLists.txt
core/include/: bloom_filter.hpp  bloom_filter_simple.hpp  cache.hpp  cache_config.hpp  cm_sketch.hpp  large_page.hpp  large_page_provider.hpp  lru.hpp  small_page.hpp  small_page_advanced.hpp  small_page_basic.hpp  tiny_lfu_cms.hpp  utils.hpp
core/src/: greeter.cpp
test/: CMakeLists.txt  bloom_filter_simple_test.cpp  bloom_filter_test.cpp  cache_test.cpp  cm_sketch_test.cpp  large_page_test.cpp  lru_test.cpp  small_page_test.cpp  tiny_lfu_cms_test.cpp  tiny_lfu_test.cpp
